headers/posix/wchar.h
@@ -27,8 +27,10 @@ typedef __WINT_TYPE__ wint_t;
 typedef int wctype_t;
 
 typedef struct {
+	void* converter;
+	char charset[64];
 	unsigned int count;
-	unsigned int converterID;
+	char data[1024 + 8];	// 1024 bytes for data, 8 for alignment space
 } mbstate_t;
 
 
