src/system/libroot/add-ons/icu/ICUCategoryData.cpp
@@ -30,44 +30,6 @@ ICUCategoryData::~ICUCategoryData()
 
 
 status_t
-ICUCategoryData::_GetConverter(ICUConverterRef& converterRefOut)
-{
-	// we use different converter-IDs per thread in order to avoid converters
-	// being used by more than one thread
-	ICUThreadLocalStorageValue* tlsValue = NULL;
-	status_t result = ICUThreadLocalStorageValue::GetInstanceForKey(
-		fThreadLocalStorageKey, tlsValue);
-	if (result != B_OK)
-		return result;
-
-	ICUConverterRef converterRef;
-	result = ICUConverterManager::Instance()->GetConverter(
-		tlsValue->converterID, converterRef);
-	if (result == B_OK) {
-		if (strcmp(converterRef->Charset(), fGivenCharset) == 0) {
-			converterRefOut = converterRef;
-			return B_OK;
-		}
-
-		// charset no longer matches the converter, we need to dump it and
-		// create a new one
-		ICUConverterManager::Instance()->DropConverter(tlsValue->converterID);
-		tlsValue->converterID = 0;
-	}
-
-	// create a new converter for the current charset
-	result = ICUConverterManager::Instance()->CreateConverter(fGivenCharset,
-		converterRef, tlsValue->converterID);
-	if (result != B_OK)
-		return result;
-
-	converterRefOut = converterRef;
-
-	return B_OK;
-}
-
-
-status_t
 ICUCategoryData::SetTo(const Locale& locale, const char* posixLocaleName)
 {
 	if (!posixLocaleName)
@@ -115,14 +77,14 @@ ICUCategoryData::_ConvertUnicodeStringToLocaleconvEntry(
 	const UnicodeString& string, char* destination, int destinationSize,
 	const char* defaultValue)
 {
-	ICUConverterRef converterRef;
-	status_t result = _GetConverter(converterRef);
+	UConverter* converter;
+	status_t result = _GetConverter(converter);
 	if (result != B_OK)
 		return result;
 
 	UErrorCode icuStatus = U_ZERO_ERROR;
-	ucnv_fromUChars(converterRef->Converter(), destination, destinationSize,
-		string.getBuffer(), string.length(), &icuStatus);
+	ucnv_fromUChars(converter, destination, destinationSize, string.getBuffer(),
+		string.length(), &icuStatus);
 	if (!U_SUCCESS(icuStatus)) {
 		switch (icuStatus) {
 			case U_BUFFER_OVERFLOW_ERROR:
@@ -145,10 +107,62 @@ ICUCategoryData::_ConvertUnicodeStringToLocaleconvEntry(
 
 
 status_t
+ICUCategoryData::_GetConverter(UConverter*& converterOut)
+{
+	// we use different converters per thread to avoid concurrent accesses
+	ICUThreadLocalStorageValue* tlsValue = NULL;
+	status_t result = ICUThreadLocalStorageValue::GetInstanceForKey(
+		fThreadLocalStorageKey, tlsValue);
+	if (result != B_OK)
+		return result;
+
+	if (tlsValue->converter != NULL) {
+		if (strcmp(tlsValue->charset, fGivenCharset) == 0) {
+			converterOut = tlsValue->converter;
+			return B_OK;
+		}
+
+		// charset no longer matches the converter, we need to dump it and
+		// create a new one
+		ucnv_close(tlsValue->converter);
+	}
+
+	// create a new converter for the current charset
+	UErrorCode icuStatus = U_ZERO_ERROR;
+	UConverter* icuConverter = ucnv_open(fGivenCharset, &icuStatus);
+	if (icuConverter == NULL)
+		return B_NAME_NOT_FOUND;
+
+	// setup the new converter to stop upon any errors
+	icuStatus = U_ZERO_ERROR;
+	ucnv_setToUCallBack(icuConverter, UCNV_TO_U_CALLBACK_STOP, NULL, NULL, NULL,
+		&icuStatus);
+	if (!U_SUCCESS(icuStatus)) {
+		ucnv_close(icuConverter);
+		return B_ERROR;
+	}
+	icuStatus = U_ZERO_ERROR;
+	ucnv_setFromUCallBack(icuConverter, UCNV_FROM_U_CALLBACK_STOP, NULL, NULL,
+		NULL, &icuStatus);
+	if (!U_SUCCESS(icuStatus)) {
+		ucnv_close(icuConverter);
+		return B_ERROR;
+	}
+
+	tlsValue->converter = icuConverter;
+	strlcpy(tlsValue->charset, fGivenCharset, sizeof(tlsValue->charset));
+
+	converterOut = icuConverter;
+
+	return B_OK;
+}
+
+
+status_t
 ICUCategoryData::_SetupConverter()
 {
-	ICUConverterRef converterRef;
-	return _GetConverter(converterRef);
+	UConverter* converter;
+	return _GetConverter(converter);
 }
 
 
