src/system/libroot/add-ons/icu/ICUCollateData.cpp
@@ -10,8 +10,6 @@
 
 #include <unicode/unistr.h>
 
-#include "ICUConverterManager.h"
-
 
 namespace BPrivate {
 namespace Libroot {
@@ -153,14 +151,13 @@ ICUCollateData::_ToUnicodeString(const char* in, UnicodeString& out)
 	if (inLen == 0)
 		return B_OK;
 
-	ICUConverterRef converterRef;
-	status_t result = _GetConverter(converterRef);
+	UConverter* converter;
+	status_t result = _GetConverter(converter);
 	if (result != B_OK)
 		return result;
 
 	UErrorCode icuStatus = U_ZERO_ERROR;
-	int32_t outLen = ucnv_toUChars(converterRef->Converter(), NULL, 0, in,
-		inLen, &icuStatus);
+	int32_t outLen = ucnv_toUChars(converter, NULL, 0, in, inLen, &icuStatus);
 	if (icuStatus != U_BUFFER_OVERFLOW_ERROR)
 		return B_BAD_VALUE;
 	if (outLen < 0)
@@ -170,8 +167,8 @@ ICUCollateData::_ToUnicodeString(const char* in, UnicodeString& out)
 
 	UChar* outBuf = out.getBuffer(outLen + 1);
 	icuStatus = U_ZERO_ERROR;
-	outLen = ucnv_toUChars(converterRef->Converter(), outBuf, outLen + 1, in,
-		inLen, &icuStatus);
+	outLen
+		= ucnv_toUChars(converter, outBuf, outLen + 1, in, inLen, &icuStatus);
 	if (!U_SUCCESS(icuStatus)) {
 		out.releaseBuffer(0);
 		return B_BAD_VALUE;
